syntax = "proto3";

package transaction_v1;

option go_package = "proto/transaction_v1;transaction_v1";

import "google/protobuf/timestamp.proto";

message Transaction {
  string id = 1;
  string userId = 2;
  OperationType operationType = 3;
  double price = 4;
  Currency currency = 5;
  reserved 6 to 10;

  google.protobuf.Timestamp created_time = 11;

  reserved 12 to 16;

}

enum OperationType {
  OPERATION_TYPE_CREDITING = 0;
  OPERATION_TYPE_DEBITING = 1;
  OPERATION_TYPE_NONE = 3;
}

enum Currency {
    CURRENCY_USD = 0;
    CURRENCY_EUR = 2;
    CURRENCY_RUB = 3;
    CURRENCY_NONE = 4;
}